--- a/src/scss/components/_products.scss
+++ b/src/scss/components/_products.scss
@@ -40,6 +40,7 @@
 		&-preview {
 			margin-right: 8px;
 		}
+
 		&-heart {
 			display: flex;
 			justify-content: center;
@@ -47,6 +48,7 @@
 			border-radius: 100%;
 			padding: 11px;
 		}
+
 		&-text {
 			font-family: "Ubuntu";
 			font-weight: 700;
@@ -54,6 +56,13 @@
 			line-height: 14px;
 			text-transform: uppercase;
 			color: var(--white-color);
+		}
+
+		&-clicked {
+			& .products__heart-white {
+				transition: all 0.3s ease;
+				fill: var(--red-color);
+			}
 		}
 	}
 	&__heart {
@@ -64,6 +73,7 @@
 		fill: transparent;
 		stroke: var(--white-color);
 		&-white {
+			transition: fill 0.3s ease;
 			fill: var(--white-color);
 		}
 	}
