--- a/src/scss/components/_menu.scss
+++ b/src/scss/components/_menu.scss
@@ -2,22 +2,13 @@
 	display: none;
 	position: fixed;
 	transform: translateX(100%);
-	// visibility: hidden;
 	opacity: 0;
-	// transition: opacity 1s ease, visibility 1s ease, transform 1s ease;
-	// &--active {
-	// 	visibility: visible;
-	// 	opacity: 1;
-	// 	transform: translateX(0);
-	// 	transition: opacity 0.5s ease, visibility 0.5s ease, transform 0.5s ease;
 	width: 100%;
 	height: 100vh;
 	background: var(--black-color);
 	z-index: 999;
 	padding: 40px;
 	&__link {
-		// opacity: 0;
-		// transition: opacity 1s ease;
 		color: var(--white-color);
 		font-weight: 400;
 		font-size: 32px;
@@ -41,5 +32,11 @@
 				}
 			}
 		}
+	}
+}
+
+@media (max-width: 320px) {
+	.menu {
+		padding: 24px;
 	}
 }
