cabinets section create

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -19,5 +19,6 @@
 @import "./components/products";
 @import "./components/colors";
 @import "./components/making";
+@import "./components/cabinets";
 @import "./components/menu";
 @import "./components/burger";
