cabinets section done

--- a/src/partials/cabinets.html
+++ b/src/partials/cabinets.html
@@ -1,5 +1,55 @@
 <section class="cabinets">
 	<div class="container cabinets__container">
-		<h2 class="title__primary cabinets__title">Made to last</h2>
+		<div class="cabinets__info">
+			<h2 class="title__primary cabinets__title">Made to last</h2>
+			<h5 class="cabinets__subtitle">
+				Dovetail Joints with Pocket Hole Screws
+			</h5>
+			<p class="cabinets__text">
+				Willow bathroom cabinets constructed from premium solid hardwood
+				and ENVIRONMENTALLY FRIENDLY PLYWOOD which enables these units
+				to withstand more pressure, weight, and usage over time.
+				MULTI-STAGE WOOD PREPARATION, SANDING, AND FINISHING PROCESS
+				allow for longer lifespans compared to units constructed from
+				MDF or particle boards.
+			</p>
+			<button
+				class="btn-reset btn__primary btn__primary-white cabinets__btn"
+			>
+				Learn More
+			</button>
+		</div>
+		<div class="cabinets__images">
+			<img
+				loading="lazy"
+				src="./img/cabinets_img1.webp"
+				class="image cabinets__image"
+				alt="Изображение кабинета"
+			/>
+			<img
+				loading="lazy"
+				src="./img/cabinets_img2.webp"
+				class="image cabinets__image"
+				alt="Изображение кабинета"
+			/>
+			<img
+				loading="lazy"
+				src="./img/cabinets_img3.webp"
+				class="image cabinets__image"
+				alt="Изображение кабинета"
+			/>
+			<img
+				loading="lazy"
+				src="./img/cabinets_img4.webp"
+				class="image cabinets__image"
+				alt="Изображение кабинета"
+			/>
+			<img
+				loading="lazy"
+				src="./img/cabinets_img5.webp"
+				class="image cabinets__image"
+				alt="Изображение кабинета"
+			/>
+		</div>
 	</div>
 </section>
