--- a/src/scss/components/_btn.scss
+++ b/src/scss/components/_btn.scss
@@ -8,6 +8,10 @@
 		padding: 12px 25px;
 		background-color: var(--black-color);
 		border-radius: 4px;
+		&-white {
+			background: var(--white-color);
+			color: var(--black-color);
+		}
 	}
 	&__secondary {
 		padding: 18px;
