--- a/src/scss/components/_cabinets.scss
+++ b/src/scss/components/_cabinets.scss
@@ -1,10 +1,74 @@
 .cabinets {
-	min-height: 520px;
-	background-color: var(--black-color);
+	min-height: 560px;
+	background: linear-gradient(
+		to bottom,
+		var(--black-color) 527px,
+		var(--white-color) 33px
+	);
 	&__container {
-		padding-top: 110px;
+		display: flex;
 	}
 	&__title {
+		padding-top: 110px;
 		color: var(--white-color);
+	}
+	&__subtitle {
+		color: var(--darker-white-color);
+		font-family: "Source Sans Pro";
+		font-weight: 400;
+		font-size: 24px;
+		line-height: 30px;
+		margin-top: 30px;
+		margin-bottom: 0;
+	}
+	&__text {
+		color: var(--grey-color);
+		font-family: "Source Sans Pro";
+		font-weight: 400;
+		font-size: 14px;
+		line-height: 26px;
+		margin-top: 16px;
+		margin-bottom: 0;
+	}
+	&__btn {
+		margin-top: 22px;
+	}
+	&__info {
+		padding-right: 50px;
+		max-width: 740px;
+		// хз насчет этого может надо убрать что бы картинки выходили за блок потом хзхзхз
+	}
+	&__images {
+		display: grid;
+		grid-template-rows: 276px 261px;
+		grid-template-columns: repeat(12, 1fr);
+		width: 700px;
+		gap: 16px;
+		padding-top: 16px;
+		position: relative;
+	}
+	&__image {
+		&:nth-child(1) {
+			grid-column: 4 span;
+			justify-self: end;
+			align-self: flex-end;
+		}
+		&:nth-child(2) {
+			grid-column: 8 span;
+			align-self: end;
+		}
+		&:nth-child(3) {
+			grid-row: 2;
+			grid-column: 5 span;
+		}
+		&:nth-child(4) {
+			grid-row: 2;
+			grid-column: 7 span;
+		}
+		&:nth-child(5) {
+			position: absolute;
+			top: -40px;
+			right: -230px;
+		}
 	}
 }
