--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -20,5 +20,7 @@
 @import "./components/colors";
 @import "./components/making";
 @import "./components/cabinets";
+@import "./components/subscribe";
+@import "./components/details";
 @import "./components/menu";
 @import "./components/burger";
