--- a/src/scss/components/_cabinets.scss
+++ b/src/scss/components/_cabinets.scss
@@ -2,8 +2,8 @@
 	min-height: 560px;
 	background: linear-gradient(
 		to bottom,
-		var(--black-color) 527px,
-		var(--white-color) 33px
+		var(--black-color) 94%,
+		var(--white-color) 6%
 	);
 	&__container {
 		display: flex;
@@ -14,7 +14,7 @@
 	}
 	&__subtitle {
 		color: var(--darker-white-color);
-		font-family: "Source Sans Pro";
+		font-family: "SourceSansPro";
 		font-weight: 400;
 		font-size: 24px;
 		line-height: 30px;
@@ -23,7 +23,7 @@
 	}
 	&__text {
 		color: var(--grey-color);
-		font-family: "Source Sans Pro";
+		font-family: "SourceSansPro";
 		font-weight: 400;
 		font-size: 14px;
 		line-height: 26px;
