--- a/src/partials/details.html
+++ b/src/partials/details.html
@@ -19,7 +19,7 @@
 				<img
 					loading="lazy"
 					src="./img/sms.svg"
-					class="imageimage details__icon"
+					class="image details__icon"
 					width="26"
 					height="26"
 					alt="Иконка карты"
@@ -33,7 +33,7 @@
 				<img
 					loading="lazy"
 					src="./img/calendar.svg"
-					class="imageimage details__icon"
+					class="image details__icon"
 					width="26"
 					height="26"
 					alt="Иконка карты"
@@ -47,7 +47,7 @@
 				<img
 					loading="lazy"
 					src="./img/phone.svg"
-					class="imageimage details__icon"
+					class="image details__icon"
 					width="26"
 					height="26"
 					alt="Иконка карты"
