--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,3 +1,75 @@
 <footer class="footer">
-	<div class="container"></div>
+	<div class="container-bigger footer__container">
+		<div>
+			<img
+				loading="lazy"
+				src="./img/footerLogo.webp"
+				class="image footer__logo"
+				alt="Логотип"
+			/>
+			<div class="footer__menu">
+				<ul class="footer__list list-reset">
+					<li class="footer__item footer__item-title">
+						Customer service
+					</li>
+					<li class="footer__item">Shipping And Delivery</li>
+					<li class="footer__item">Warranty</li>
+					<li class="footer__item">Returns</li>
+					<li class="footer__item">Privacy Policy</li>
+					<li class="footer__item">FAQs</li>
+				</ul>
+				<ul class="footer__list list-reset">
+					<li class="footer__item footer__item-title">Menu</li>
+					<li class="footer__item">Home</li>
+					<li class="footer__item">Shop</li>
+					<li class="footer__item">Quality</li>
+				</ul>
+				<ul class="footer__list list-reset">
+					<li class="footer__item footer__item-title">Contact</li>
+					<li class="footer__item">Showroom</li>
+					<li class="footer__item">Contacts</li>
+					<li class="footer__item">About Us</li>
+				</ul>
+			</div>
+		</div>
+		<div>
+			<ul class="list-reset footer__social">
+				<li>
+					<svg class="footer__icon footer__icon-top">
+						<use xlink:href="img/sprite.svg#linkedin-footer"></use>
+					</svg>
+				</li>
+				<li>
+					<svg class="footer__icon footer__icon-top">
+						<use xlink:href="img/sprite.svg#facebook-footer"></use>
+					</svg>
+				</li>
+				<li>
+					<svg class="footer__icon footer__icon-top">
+						<use xlink:href="img/sprite.svg#inst-footer"></use>
+					</svg>
+				</li>
+				<li>
+					<svg class="footer__icon footer__icon-top">
+						<use xlink:href="img/sprite.svg#twitter-footer"></use>
+					</svg>
+				</li>
+				<li>
+					<svg class="footer__icon footer__icon-bottom">
+						<use xlink:href="img/sprite.svg#paypal2"></use>
+					</svg>
+				</li>
+				<li>
+					<svg class="footer__icon footer__icon-bottom">
+						<use xlink:href="img/sprite.svg#express"></use>
+					</svg>
+				</li>
+				<li>
+					<svg class="footer__icon footer__icon-bottom">
+						<use xlink:href="img/sprite.svg#visa"></use>
+					</svg>
+				</li>
+			</ul>
+		</div>
+	</div>
 </footer>
