--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -23,7 +23,7 @@
 					class="swiper-pagination swiper-pagination-reviews slide__pagination-reviews"
 				></div>
 			</div>
-			<div class="swiper-wrapper slide__wrapper-reviews">
+			<div class="swiper-wrapper">
 				<div class="swiper-slide slide-reviews">
 					<div class="slide__header">
 						<img
