--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -31,4 +31,6 @@
 	--yellow-color: #ffe895;
 	--blue-color: #95b9ff;
 	--details-container-grey: #e5e5e5;
+	--footer-item-color: #c4c4c4;
+	--footer-icon-color: #333333;
 }
