--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -22,5 +22,6 @@
 @import "./components/cabinets";
 @import "./components/subscribe";
 @import "./components/details";
+@import "./components/footer";
 @import "./components/menu";
 @import "./components/burger";
