--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,6 +1,6 @@
 <footer class="footer">
 	<div class="container-bigger footer__container">
-		<div>
+		<div class="footer__side-left">
 			<img
 				loading="lazy"
 				src="./img/footerLogo.webp"
@@ -32,7 +32,7 @@
 				</ul>
 			</div>
 		</div>
-		<div>
+		<div class="footer__side-right">
 			<ul class="list-reset footer__social">
 				<li>
 					<svg class="footer__icon footer__icon-top">
@@ -54,22 +54,8 @@
 						<use xlink:href="img/sprite.svg#twitter-footer"></use>
 					</svg>
 				</li>
-				<li>
-					<svg class="footer__icon footer__icon-bottom">
-						<use xlink:href="img/sprite.svg#paypal2"></use>
-					</svg>
-				</li>
-				<li>
-					<svg class="footer__icon footer__icon-bottom">
-						<use xlink:href="img/sprite.svg#express"></use>
-					</svg>
-				</li>
-				<li>
-					<svg class="footer__icon footer__icon-bottom">
-						<use xlink:href="img/sprite.svg#visa"></use>
-					</svg>
-				</li>
 			</ul>
+			<img src="./img/map.webp" alt="Карта" class="footer__map image" />
 		</div>
 	</div>
 </footer>
