--- a/src/scss/components/_cabinets.scss
+++ b/src/scss/components/_cabinets.scss
@@ -35,8 +35,7 @@
 	}
 	&__info {
 		padding-right: 50px;
-		max-width: 740px;
-		// хз насчет этого может надо убрать что бы картинки выходили за блок потом хзхзхз
+		max-width: 55%;
 	}
 	&__images {
 		display: grid;
@@ -69,6 +68,58 @@
 			position: absolute;
 			top: -40px;
 			right: -230px;
+		}
+	}
+}
+
+@media (max-width: 1024px) {
+	.cabinets {
+		&__container {
+			flex-direction: column;
+		}
+		&__info {
+			max-width: 100%;
+			display: flex;
+			flex-direction: column;
+			justify-content: center;
+			padding-right: 0;
+			max-width: 90%;
+			align-self: center;
+		}
+		&__btn {
+			width: fit-content;
+			align-self: center;
+		}
+		&__title {
+			text-align: center;
+		}
+		&__subtitle {
+			text-align: center;
+			margin-top: 14px;
+		}
+		&__image:nth-child(5) {
+			top: 14px;
+			right: -210px;
+		}
+	}
+}
+
+@media (max-width: 768px) {
+	.cabinets {
+		&__image:nth-child(5) {
+			display: none;
+		}
+		&__container {
+			align-items: center;
+		}
+	}
+}
+
+@media (max-width: 768px) {
+	.cabinets {
+		&__images {
+			width: unset;
+			grid-template-rows: unset;
 		}
 	}
 }
