--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -16,7 +16,7 @@
 					</button>
 				</div>
 				<img
-					src="./img/product-1.png"
+					src="./img/product-1.avif"
 					class="image products__img"
 					alt="Изображение товара"
 				/>
@@ -71,7 +71,7 @@
 					</button>
 				</div>
 				<img
-					src="./img/product-2.png"
+					src="./img/product-2.avif"
 					class="image products__img"
 					alt="Изображение товара"
 				/>
@@ -126,7 +126,7 @@
 					</button>
 				</div>
 				<img
-					src="./img/product-3.png"
+					src="./img/product-3.avif"
 					class="image products__img"
 					alt="Изображение товара"
 				/>
@@ -181,7 +181,7 @@
 					</button>
 				</div>
 				<img
-					src="./img/product-4.png"
+					src="./img/product-4.avif"
 					class="image products__img"
 					alt="Изображение товара"
 				/>
