--- a/src/partials/shop.html
+++ b/src/partials/shop.html
@@ -3,7 +3,7 @@
 		<h2 class="title__primary shop__title">Our shop</h2>
 		<ul class="shop__list list-reset">
 			<li class="shop__item">
-				<img src="./img/shop-img-1.png" alt="Изображение товара" />
+				<img src="./img/shop-img-1.avif" alt="Изображение товара" />
 				<button class="btn btn-reset btn__secondary shop__btn">
 					<span class="btn__text-secondary">Best Seller</span>
 					<img
@@ -17,7 +17,7 @@
 				</button>
 			</li>
 			<li class="shop__item">
-				<img src="./img/shop-img-2.png" alt="Изображение товара" />
+				<img src="./img/shop-img-2.avif" alt="Изображение товара" />
 				<button class="btn btn-reset btn__secondary shop__btn">
 					<span class="btn__text-secondary">Bathroom Vanities</span>
 					<img
@@ -31,7 +31,7 @@
 				</button>
 			</li>
 			<li class="shop__item">
-				<img src="./img/shop-img-3.png" alt="Изображение товара" />
+				<img src="./img/shop-img-3.avif" alt="Изображение товара" />
 				<button class="btn btn-reset btn__secondary shop__btn">
 					<span class="btn__text-secondary">New Arrival</span>
 					<img
@@ -45,7 +45,7 @@
 				</button>
 			</li>
 			<li class="shop__item">
-				<img src="./img/shop-img-4.png" alt="Изображение товара" />
+				<img src="./img/shop-img-4.avif" alt="Изображение товара" />
 				<button class="btn btn-reset btn__secondary shop__btn">
 					<span class="btn__text-secondary"
 						>Freestanding Bathtubs</span
