--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -4,7 +4,7 @@
 			<div class="swiper-wrapper">
 				<div class="swiper-slide slide-hero">
 					<img
-						src="./img/slide1img.png"
+						src="./img/slide1img.avif"
 						class="slide__image-hero"
 						alt="Изображение слайда"
 					/>
@@ -33,7 +33,7 @@
 				</div>
 				<div class="swiper-slide slide-hero">
 					<img
-						src="./img/slide1img.png"
+						src="./img/slide1img.avif"
 						class="slide__image-hero"
 						alt="Изображение слайда"
 					/>
@@ -60,7 +60,7 @@
 				</div>
 				<div class="swiper-slide slide-hero">
 					<img
-						src="./img/slide1img.png"
+						src="./img/slide1img.avif"
 						class="slide__image-hero"
 						alt="Изображение слайда"
 					/>
@@ -87,7 +87,7 @@
 				</div>
 				<div class="swiper-slide slide-hero">
 					<img
-						src="./img/slide1img.png"
+						src="./img/slide1img.avif"
 						class="slide__image-hero"
 						alt="Изображение слайда"
 					/>
