--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -31,7 +31,7 @@
 					</li>
 				</ul>
 				<img
-					src="./img/logo.png"
+					src="./img/logo.avif"
 					alt="Логотип компании"
 					class="nav__logo"
 				/>
